2000-06-18  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_init): dont create vpane, since the split screen
	is disabled now.

	* window.c (gedit_window_set_toolbar_labels): finish preference toolbar
	labels set to system-wide setting.

	* view.c (gedit_view_changed_cb): install menu hints for the Document
	menus

2000-06-18  Chema Celorio  <chema@celorio.com>

	* view.c: the toolbar is a view element not a window one
	because if mdi_mode = TOPLEVEL, each view has it's own toolbar
	* window.c: ditto
	* document.c: ditto

2000-06-17  Chema Celorio  <chema@celorio.com>

	* dialogs/dialog-prefs.c: add toobar_labels group

	* prefs.c (gedit_prefs_save_settings): toolbar_labels, change to int
	(gedit_prefs_determine_use_fontset): ditto

	* window.c (gedit_window_new): fix the problems with mdi_mode = TOPLEVEL

	* gedit.c (main): reorder the *_init_functions

	* print.c (file_print_cb): #ifdef PRINT_SELECTION so that we can
	compile against gnome-print-0.20

2000-06-16  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_status_bar): fix
	( still has problems with Mdi_mode=TOP_level)

	* gedit.c (main): change the order of initialization

	* view.c (gedit_view_get_position): add sanity check

	* file.c (gedit_file_open_ok_sel): fix a crash

2000-06-15  Chema Celorio  <chema@celorio.com>

	* prefs.c (gedit_prefs_save_settings): fix a g_warning if the windows is closed
	by clickin on the [X]

	* window.c (gedit_window_destroy): remove

2000-06-15  Chema Celorio  <chema@celorio.com>

	* print.c (file_print_cb): finish print_range = selection
	you will need to update gnome_print.

	* view.c (gedit_view_get_selection): if star_pos = end_pos
	selection is not active.

2000-06-15  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_get_tab_name): mark strings for tranlation
	in a different way. They are not beeing tranlated.
	(gedit_document_set_title): mark string
