@@ -44,9 +44,12 @@ Design questions ?
     toolbar
 [x] fix the problem with the Prefs windos + mdi_mode = TOPLEVEL
 [X] Toolbar buttons text should be settable to gnomecc preference.
+[X] The tab should remain saying "RO - file.txt" but the title should say
+    "gedit: file.txt (read only)" instead
 [ ] add split window again
 [ ] If you have a toolbar with text and set it to no text
     it needs to get resized
+[ ] Select some text, hit CTL+W then cancel. The text is deleted !
 
 *** Chema maybe ***
 [ ] Try to fix the line & column pos
@@ -75,8 +78,6 @@ Design questions ?
     & settings->diff. Same thing for the browse plugin
 [ ] Split screen ???
     Should we re-enable it ? Maybe.
-[ ] The tab should remain saying "RO - file.txt" but the title should say
-    "gedit: file.txt (read only)" instead
 
 
 ----------------------------------------------------------------------
