@@ -1,3 +1,7 @@
+2000-06-18  Chema Celorio  <chema@celorio.com>
+
+	* es.po: udpated spanish translation
+
 2000-06-18  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
