@@ -1,5 +1,15 @@
 2000-06-18  Chema Celorio  <chema@celorio.com>
 
+	* document.c (gedit_document_set_title): set title to $docname $(readonly)
+	for doc->readonly == TRUE.
+
+	(doc_delete_text_cb): if start_pos == end_pos, return. This caused
+	a warning to appear when the user typed CTL+K and the line length
+	was null. Should we enable this kind of shortcuts ? I don't think
+	so.
+
+2000-06-18  Chema Celorio  <chema@celorio.com>
+
 	* view.c (gedit_view_init): dont create vpane, since the split screen
 	is disabled now.
 
